--- a/assets/css/mosh.css
+++ b/assets/css/mosh.css
@@ -286,6 +286,16 @@ src: url("../fonts/gothicb.ttf");
 
 }
 
+.header-pitbullpage {
+  height:105px;
+	padding-bottom:5px;
+
+	background:url("../img/bg-header-scorecard.png") repeat-x;
+
+
+}
+
+
 .header-artist-brand{
   height:245px;
 	padding-bottom:10px;
@@ -331,6 +341,28 @@ top:100px;
   margin-bottom: 26px;
   margin-right: 10px;
 }
+
+
+.mid-box-pitbull-profile {
+  border: 1px solid #efefef;
+  width: 246px;
+  height: 610px;
+  float: left;
+  margin-bottom: 1px;
+  margin-left: 28px;
+	
+}
+
+.mid-box-pitbull-charts {
+  border: 1px solid #efefef;
+  width: 710px;
+  height: 610px;
+  float: left;
+ 
+  margin-left: 10px;
+	
+}
+
 
 .areaClick{
 cursor: pointer;
@@ -440,6 +472,14 @@ background-color:#fafafa;
   font-size: 25px;
 }
 
+
+.pitbull-profile-buttons {
+    width: 246px;
+    height: 56px;
+		padding-top: 10px;
+		
+	  
+}
 
 
 
