--- a/assets/css/mosh.css
+++ b/assets/css/mosh.css
@@ -174,7 +174,7 @@
   background-image: url('../img/bg-footer1.jpg');
   float: left;
   width: 100%;
-  height: 165px;
+  /* height: 165px; */
 }
 
 .follow-mosh {
@@ -350,7 +350,7 @@ top:100px;
   float: left;
   margin-bottom: 1px;
   margin-left: 28px;
-	
+
 }
 
 .mid-box-pitbull-charts {
@@ -358,9 +358,9 @@ top:100px;
   width: 710px;
   height: 610px;
   float: left;
- 
+
   margin-left: 10px;
-	
+
 }
 
 
@@ -477,8 +477,8 @@ background-color:#fafafa;
     width: 246px;
     height: 56px;
 		padding-top: 10px;
-		
-	  
+
+
 }
 
 
