--- a/assets/css/mosh.css
+++ b/assets/css/mosh.css
@@ -171,7 +171,7 @@
 /* begin mid box container */
 
 .footer {
-  background-image: url('../img/bg-footer1.jpg');
+  /* background-image: url('../img/bg-footer1.jpg'); */
   float: left;
   width: 100%;
   /* height: 165px; */
@@ -261,6 +261,31 @@ hr {
   padding-top: 10px;
 }
 
+.temp-footer-link {
+  border:1px solid #f00;
+}
+
+.temp-footer-link a {
+
+}
+
+.temp-footer-link.about {
+
+}
+
+.temp-footer-link.news {
+
+}
+
+.temp-footer-link.contact {
+
+}
+
+.footer table td {
+  margin:0;
+  padding:0;
+  border:0;
+}
 
 /******** START ALEC EDIT ***************/
 
